--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -40,7 +40,7 @@
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
+
   Services
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
@@ -50,7 +50,7 @@
 
   Vision
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
+  <h1>This is a test commit </h1>
   Contact
   123 Way 456 Street
   Somewhere, USA
@@ -58,6 +58,6 @@
   sales@greatidea.io
 
   Copyright Great Idea! 2018
-  
+
   </body>
 </html>
