--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <nav class="navigation">
-            <a href="#">Services</a>
+             <a href="#">Services</a>
             <a href="#">Product</a>
             <a href="#">Vision</a>
             <a href="#">Features</a>
@@ -25,22 +25,22 @@
             <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
         </nav>
         <header>
-            Innovation
+            <h1> Innovation
             On
             Demand
-
-            Get Started
-
-            <img src="img/header-img.png" alt="Image of a code snippet.">
-            <header>
+            </h1>
+            <button> Get Started</button>
+            <hr>
+            <img src="img/header-img.png" class="code" alt="Image of a code snippet.">
+            </header>
                 <section class="section1">
-                    Features
-                    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                    <h3>    Features</h3>
+                    <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
 
-
-                    About
-                    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-                </section>
+                <h3> About</h3>
+                <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p> </section>
                 <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
                 <section class="section2">
                     Services
