--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,23 +16,24 @@
 
     <body>
         <nav class="navigation">
-             <a href="#">Services</a>
+            <a href="#">Services</a>
             <a href="#">Product</a>
             <a href="#">Vision</a>
             <a href="#">Features</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
+            </nav>
             <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-        </nav>
+
         <header>
             <h1> Innovation
             On
             Demand
             </h1>
             <button> Get Started</button>
-            <hr>
             <img src="img/header-img.png" class="code" alt="Image of a code snippet.">
-            </header>
+            <hr>
+            <div class="container">  </header>
                 <section class="section1">
                     <h3>    Features</h3>
                     <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
@@ -43,14 +44,15 @@
                 </p> </section>
                 <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
                 <section class="section2">
-                    Services
-                    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                    <h3>  Services</h3>
+                    <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
-
-                    Product
-                    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                    </p>
+                    <h3> Product</h3>
+                <p>   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
                     Vision
                     Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
                 </section>
 
                 <section class="contact">
@@ -61,7 +63,8 @@
                     sales@greatidea.io
                 </section>
                 <footer>
-                    Copyright Great Idea! 2018
+                    <strong> Copyright Great Idea! 2018</strong>
                 </footer>
+            </div>
     </body>
 </html>
